Fixed quirk with misaligned photogrid. fixes #105

--- a/src/features/photos/photos.scss
+++ b/src/features/photos/photos.scss
@@ -36,6 +36,7 @@
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
     display: grid;
     cursor: pointer;
+    overflow: hidden;
     &:hover img {
       filter: saturate(1);
     }
